Update contact information in contact.html

--- a/contact.html
+++ b/contact.html
@@ -394,8 +394,7 @@
                     <div class="info-icon">📞</div>
                     <div class="info-details">
                         <h3>Phone</h3>
-                        <p>Main Line: +63 XXX XXX XXXX<br>
-                        Mobile: +63 9XX XXX XXXX</p>
+                        Mobile: +63 961 201 5867</p>
                     </div>
                 </div>
 
@@ -403,8 +402,7 @@
                     <div class="info-icon">📧</div>
                     <div class="info-details">
                         <h3>Email</h3>
-                        <p>info@ylcnuvali.com<br>
-                        admissions@ylcnuvali.com</p>
+                        <p>younglearningcenter2026@gmail.com</p>
                     </div>
                 </div>
 
