Update Saturday office hours to appointment only

--- a/contact.html
+++ b/contact.html
@@ -411,7 +411,7 @@
                     <div class="info-details">
                         <h3>Office Hours</h3>
                         <p>Monday - Friday: 7:00 AM - 5:00 PM<br>
-                        Saturday: 8:00 AM - 12:00 PM<br>
+                        Saturday: By appointment only<br>
                         Sunday: Closed</p>
                     </div>
                 </div>
